<resources>
    <string name="app_name">Bookmark Wallet</string>
    <string name="action_settings">Settings</string>
    <string name="bookmarks_title">Bookmarks</string>
    <string name="bookmarks_description">stored on your phone</string>
    <string name="open_in_browser_label_text">OPEN</string>
    <string name="more_label_text">more…</string>
    <string name="tap_to_edit_label_string">Tap to edit your bookmark info</string>
    <string name="update_label_button">UPDATE</string>
    <string name="save_label_button">SAVE</string>
    <string name="save_ai_label_button">Save with AI</string>
    <string name="ecosia_label_button">Search\nwith Ecosia</string>

    <!--    Search Bookmark-->
    <string name="search_actionbar_string">Search Bookmarks</string>
    <string name="past_clip_message">Hey you paste clipboard!</string>
    <string name="add_actionbar_string">Add new Bookmark</string>

    <!--    Other actions Bookmark-->
    <string name="delete_fulle_descr_label_text">Sure you want delete your bookmark permanently?</string>
    <string name="settings_actionbar_string">Settings</string>
    <string name="no_bookmark_string">Still no Bookmarks in list,\n seem so sad!</string>
    <string name="add_new_string">Add new</string>
    <string name="add_bookmark">Add Bookmark</string>
    <string name="add_bookmark_with_success">Hey! Added Bookmark with success!!!</string>
    <string name="no_bookmark_star_string">Still no favorite bookmarks\nhere!</string>
    <string name="search_your_bookmarks_string">Search your bookmark</string>
    <string name="save_your_bookmark_label">Save your bookmark</string>
    <string name="bookmarks_title_string">Bookmarks</string>
    <string name="update_bookmarks_label">Update your bookmark</string>
    <string name="oh_snap_error_string">Oh Snap! We got an error:</string>
    <string name="no_search_result_string">No results…</string>
    <string name="star_title_string">Stars</string>
    <string name="more_settings_description">Something more here....\nThanks
        for all illustration in app, due to a dedicate works of a lot of illustrators and friends!\n....
        \nBookmarksWallet@2020</string>
    <string name="last_update">Last update:</string>
    <string name="search">SEARCH</string>
    <string name="settings">Settings</string>
    <string name="with">with</string>
    <string name="stored_in_your_list">stored in your list</string>
    <string name="saved_in_nyour_list">saved in\nyour list</string>
    <string name="filtering_by">filtering by</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="edit_bookmark">Edit</string>
    <string name="update_bookmark_label">Update</string>
    <string name="search_bookmark">New Search</string>
    <string name="just_type_a_bookmark">just type a bookmark</string>
    <string name="paste_clipboard">paste\nclip</string>
    <string name="description">Description</string>
    <string name="value">value</string>
    <string name="title_insert">Title insert…</string>
    <string name="search_your_bookmark">Just type a Bookmark</string>
    <string name="open_bookmark">Open</string>
    <string name="bookmark_url">Bookmark Url</string>
    <string name="bookmark_title_label">Title</string>
    <string name="bookmark_title_description">title for your bookmark</string>
    <string name="bookmark_list_type">list</string>
    <string name="bookmark_grid_type">grid</string>
    <string name="bookmark_group_type">group</string>
    <string name="edit_bookmark_label">edit your bookmark</string>
    <string name="pin_bookmark_label">pin as preferred</string>
    <string name="share_bookmark_label">share your bookmark</string>
    <string name="delete_bookmark_label">delete from list</string>
    <string name="delete_button_label">Delete</string>

    <!--    hp filters-->
    <string name="filter_hp_list">List</string>
    <string name="filter_hp_sort_by_date">more recent</string>
    <string name="filter_hp_sort_by_name">title descending</string>
    <string name="filter_hp_pinned">pinned</string>

    <!--    empty bookmark list view-->
    <string name="empty_bookmark_list_label">Still no Bookmarks in your list.</string>

    <!--    bookmark card-->
    <string name="at_label">at</string>

    <!--    bookmark settings-->
    <string name="buy_me_a_coffee_label">Buy me a Coffee</string>
    <string name="buy_me_a_coffee_descr">Just buy me a coffee.\n\nFor developer support and continuing having new functionality in app.</string>
    <string name="in_app_pay_feat_label">AI and Search Feat</string>
    <string name="skin_color_label">Skin Color</string>
    <string name="sync_on_google_label">Sync on Google</string>
    <string name="contact_label">Contacts</string>
    <string name="contact_descr">check to send us an email</string>
    <string name="rate_label">Rate on Playstore</string>
    <string name="rate_descr">rate us and leave a feedback</string>
    <string name="app_version_label">App Version</string>
    <string name="app_version_desc">version 2.2.0\nbuild number 123456789</string>
    <string name="user_info_label">User Info</string>
    <string name="connect_google_user_label">Connect Google User</string>

    <!--    settings children pay inapp-->
    <string name="ecosia_preview_title">Ecosia Preview</string>
    <string name="ecosia_enable_preview">Enable Ecosia link previews</string>
    <string name="ecosia_preview_description">See a summary of search results while planting trees.</string>

    <string name="search_fine_tune_title">Refine search with AI</string>
    <string name="search_ai_suggested_title">AI Suggested: %1$s</string>
    <string name="search_ai_improve_query">Improve my search title</string>

    <!--    settings children pay inapp-->
    <string name="pro_label">Pro</string>
    <string name="sync_google_enabled">sync google enabled</string>
    <string name="sync_bookmark">sync bookmarks</string>

    <!--    settings children pay inapp-->
    <string name="search_with_ai_label">search with AI support</string>
    <string name="enable_preview_with_ecosia">enable preview with Ecosia</string>
    <string name="fine_search_with_ai">fine search title with AI</string>
    <string name="download_bookmark">download bookmarks</string>
    <string name="inapp_purchase_config">in app purchase configurations</string>

    <!--    bookmark list item-->
    <string name="menu_tab_bookmark_list">Bookmarks</string>
    <string name="menu_tab_settings">Profile Settings</string>
    <string name="add_title_manually">add\ntitle</string>
    <string name="userid_login">uid user</string>
</resources>
