<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="bookmarkViewModel"
            type="com.application.material.bookmarkswallet.app.viewModels.BookmarkViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/mbBookmarkHeaderSortFilterLayoutId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/mbBookmarkMainBackgroundImageId"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_scarf_illustration"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="gone" />

                <TextView
                    android:id="@+id/mbBookmarkHeaderTitleTextViewId"
                    style="@style/MBMaterialTextHeaderViolet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16"
                    android:text="@string/bookmarks_title_string"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/mbBookmarkHeaderTitleLabelTextViewId"
                    style="@style/MBMaterialTextDescrSmallThinViolet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stored_in_your_list"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mbBookmarkHeaderTitleTextViewId" />

                <!-- tot cardview -->
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/mbBookmarkHeaderTotBookmarkCardId"
                    style="@style/Widget.Material3.CardView.Elevated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mbBookmarkHeaderTitleLabelTextViewId">

                    <RelativeLayout
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_16"
                        android:layout_marginTop="@dimen/margin_8"
                        android:layout_marginEnd="@dimen/margin_8"
                        android:layout_marginBottom="@dimen/margin_8"
                        tools:layout_width="140dp">

                        <TextView
                            android:id="@+id/mbBookmarkHeaderTotBookmarkPreLabelId"
                            style="@style/MBMaterialTextDescrSmallThinWhite"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/saved_in_nyour_list" />

                        <TextView
                            android:id="@+id/mbBookmarkHeaderTotBookmarkLabelId"
                            style="@style/MBMaterialTextHeaderBigThinWhite"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/mbBookmarkHeaderTotBookmarkPreLabelId"
                            tools:text="12" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/bookmark_icon_preview_size"
                            android:layout_height="@dimen/bookmark_icon_preview_size"
                            android:layout_alignParentEnd="true"
                            android:background="?attr/selectableItemBackground"
                            android:src="@drawable/ic_bookmark"
                            app:tint="@color/colorPrimaryLight" />
                    </RelativeLayout>

                </com.google.android.material.card.MaterialCardView>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/mbBookmarkHeaderFilterActionsLayoutId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">
                <!-- button layout -->
                <LinearLayout
                    android:id="@+id/mbBookmarkHeaderSortFilterActionsLayoutId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/mbBookmarkHeaderListFilterIconId"
                        android:layout_width="@dimen/icon_filter_bookmark"
                        android:layout_height="@dimen/icon_filter_bookmark"
                        android:layout_margin="@dimen/margin_4"
                        android:background="?attr/selectableItemBackground"
                        android:padding="2dp"
                        android:src="@drawable/ic_align_horizontal_right"
                        app:tint="@color/colorPrimary" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/mbBookmarkHeaderCardFilterIconId"
                        android:layout_width="@dimen/icon_filter_bookmark"
                        android:layout_height="@dimen/icon_filter_bookmark"
                        android:layout_margin="@dimen/margin_4"
                        android:background="?attr/selectableItemBackground"
                        android:padding="2dp"
                        android:src="@drawable/ic_apps"
                        app:tint="@color/colorPrimary" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/mbBookmarkHeaderSortFilterIconId"
                        android:layout_width="@dimen/icon_filter_bookmark"
                        android:layout_height="@dimen/icon_filter_bookmark"
                        android:layout_margin="@dimen/margin_4"
                        android:background="?attr/selectableItemBackground"
                        android:padding="2dp"
                        android:src="@drawable/ic_sort_amount_up"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/colorPrimary" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/mbBookmarkHeaderStarredFilterIconId"
                        android:layout_width="@dimen/icon_filter_bookmark"
                        android:layout_height="@dimen/icon_filter_bookmark"
                        android:layout_margin="@dimen/margin_4"
                        android:background="?attr/selectableItemBackground"
                        android:padding="2dp"
                        android:src="@drawable/ic_star_circle"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/colorPrimary" />
                </LinearLayout>

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/mbGuidelineHeaderLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <TextView
                    android:id="@+id/mbBookmarkHeaderSortFilterLabelId"
                    style="@style/MBMaterialTextDescrSmallViolet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filtering_by"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/mbGuidelineHeaderLayout"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible" />

                <LinearLayout
                    android:id="@+id/mbBookmarkHeaderSortFilterChipLayoutId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/mbBookmarkHeaderSortFilterByDateChipId"
                        style="@style/MBMaterialChipDescrSmallThinWhite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="55dp"
                        android:text="@string/date"
                        app:chipIcon="@drawable/ic_clock_light"
                        tools:visibility="visible" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/mbBookmarkHeaderSortFilterByTitleChipId"
                        style="@style/MBMaterialChipDescrSmallThinViolet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="55dp"
                        android:text="@string/title"
                        app:chipIcon="@drawable/ic_font_case_light" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
            <!--main view-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mbBookmarkRecyclerViewId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_16"
                android:paddingLeft="@dimen/margin_8"
                android:paddingRight="@dimen/margin_8"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
        </LinearLayout>
        <!-- empty view-->
        <com.application.material.bookmarkswallet.app.ui.views.MbEmptyView
            android:id="@+id/mbBookmarkEmptyViewId"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="?attr/actionBarSize"
            android:visibility="gone"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:visibility="gone" />

        <!-- preivew view-->
        <androidx.compose.ui.platform.ComposeView
            android:id="@+id/mbBookmarkPreviewComposeCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            app:behavior_hideable="true"
            app:behavior_peekHeight="0dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:background="?attr/colorTertiary"
            tools:behavior_peekHeight="0dp" />
        <!--        <com.application.material.bookmarkswallet.app.ui.views.MbBookmarkPreviewView-->
        <!--            android:id="@+id/mbBookmarkPreviewCardviewId"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            app:behavior_hideable="true"-->
        <!--            app:behavior_peekHeight="0dp"-->
        <!--            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"-->
        <!--            tools:behavior_peekHeight="0dp" />-->

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>